--- a/ProfesciptaTest/Views/Home/Edit.cshtml
+++ b/ProfesciptaTest/Views/Home/Edit.cshtml
@@ -1,8 +1,8 @@
 @{
-    ViewData["PageTitle"] = "Add New - Sales Order";
-    ViewData["Title"] = "Add New - Sales Order";
+    ViewData["PageTitle"] = "Edit - Sales Order";
+    ViewData["Title"] = "Edit - Sales Order";
 }
-@model ProfesciptaTest.ViewModels.SoOrderRequestVM
+@model ProfesciptaTest.ViewModels.SoOrderResponseVM
 
 <style>
         .table th {
@@ -84,7 +84,20 @@
                     </tr>
                     </thead>
                     <tbody id="itemList">
-
+                    @for (var i = 0; i < Model.Items.Count(); i++)
+                    {
+                        <tr>
+                            <td>@(i + 1)</td>
+                            <td class="d-flex justify-content-center gap-2">
+                                <button type="button" class="btn btn-link p-0 editItem" data-index="@(i)" data-bs-toggle="modal" data-bs-target="#itemModal"><img src="/icons/edit.png" alt="edit" width="24"></button>
+                                <button type="button" class="btn btn-link p-0 deleteItem" data-index="@(i)"><img src="/icons/trash.png" alt="delete" width="20"></button>
+                            </td>
+                            <td>@Model.Items.ToList()[i].ItemName</td>
+                            <td>@Model.Items.ToList()[i].Quantity</td>
+                            <td>@Model.Items.ToList()[i].Price</td>
+                            <td>@Model.Items.ToList()[i].Total</td>
+                        </tr>
+                    }
                     @* <tr> *@
                     @*     <td colspan="6"> *@
                     @*         <!-- Pagination --> *@
@@ -124,6 +137,7 @@
             </div>
             <div class="modal-body">
                 <form id="itemForm">
+                    <input type="text" hidden id="idItem"/>
                     <div class="mb-3">
                         <label for="itemName" class="form-label">Item Name</label>
                         <input type="text" class="form-control" id="itemName" required>
@@ -145,55 +159,97 @@
         </div>
     </div>
 </div>
+
+<!-- Modal Konfirmasi Delete -->
+<div class="modal fade" id="deleteConfirmationModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-body flex-column justify-content-center align-items-center gap-2 w-100">
+                            <div class="fw-bold fs-5 text-center">Do You Want to Delete ?</div>
+                        </div>
+                        <div class="modal-footer d-flex justify-content-center gap-2">
+                            <button type="button" class="btn text-white" style="background-color: #c6bb33" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" id="confirmDelete"class="btn btn-primary">Delete</button>
+                            @* <button type="button" class="btn btn-primary">Yes</button> *@
+                            @* <button type="button" class="btn text-white" style="background-color: #c6bb33" data-bs-dismiss="modal">No</button> *@
+                        </div>
+                    </div>
+                </div>
+            </div>
 <script>
 $( document ).ready(function() {
         let itemIndex = 0;
-        let items = [];
-    
+        let items = @Html.Raw(Json.Serialize(Model.Items));
+        let deletedItemIds = [];
+        let itemToDeleteIndex = null;
+        console.log(items);
+        let orderId = @Html.Raw(ViewBag.OrderId);
+        
         function renderItems() {
-            let amount = 0;
-            let total = 0;
-            const itemList = $('#itemList');
-            itemList.empty();
-            items.forEach((item, index) => {
-                total = item.Quantity * item.Price;
-                itemList.append(`
-                    <tr>
-                        <td>${index + 1}</td>
-                        <td class="d-flex justify-content-center gap-2">
-                            <button class="btn btn-link p-0 editItem" data-index="${index}" data-bs-toggle="modal" data-bs-target="#itemModal"><img src="/icons/edit.png" alt="edit" width="24"></button>
-                            <button class="btn btn-link p-0 deleteItem" data-index="${index}"><img src="/icons/trash.png" alt="delete" width="20"></button>
-                        </td>
-                        <td>${item.ItemName}</td>
-                        <td>${item.Quantity}</td>
-                        <td>${item.Price}</td>
-                        <td>${total}</td>
-                    </tr>
-                `);
-                amount += total;
-            });
-            itemList.append(`
-            <tr>
-                <td colspan="6" class="text-end fw-bold">
-                    <span class="me-4">Total Item : ${items.length}</span>
-                    <span>Total Amount : ${amount}</span>
-                </td>
-            </tr>
-            `);
-        }
+                    const itemList = $('#itemList');
+                    itemList.empty();
+                    items.forEach((item, index) => {
+                        itemList.append(`
+                            <tr data-index="${index}">
+                                <td>${index + 1}</td>
+                                <td class="d-flex justify-content-center gap-2">
+                                    <button type="button" class="btn btn-link p-0 editItem" data-index="${index}" data-bs-toggle="modal" data-bs-target="#itemModal"><img src="/icons/edit.png" alt="edit" width="24"></button>
+                                    <button type="button" class="btn btn-link p-0 deleteItem" data-index="${index}"><img src="/icons/trash.png" alt="delete" width="20"></button>
+                                </td>
+                                <td>${item.itemName}</td>
+                                <td>${item.quantity}</td>
+                                <td>${item.price}</td>
+                                <td>${item.total}</td>
+                            </tr>
+                        `);
+                    });
+                }
+        // function renderItems() {
+        //     let amount = 0;
+        //     let total = 0;
+        //     const itemList = $('#itemList');
+        //     itemList.empty();
+        //     items.forEach((item, index) => {
+        //         total = item.Quantity * item.Price;
+        //         itemList.append(`
+        //             <tr>
+        //                 <td>${index + 1}</td>
+        //                 <td class="d-flex justify-content-center gap-2">
+        //                     <button class="btn btn-link p-0 editItem" data-index="${index}" data-bs-toggle="modal" data-bs-target="#itemModal"><img src="/icons/edit.png" alt="edit" width="24"></button>
+        //                     <button class="btn btn-link p-0 deleteItem" data-index="${index}"><img src="/icons/trash.png" alt="delete" width="20"></button>
+        //                 </td>
+        //                 <td>${item.itemName}</td>
+        //                 <td>${item.Quantity}</td>
+        //                 <td>${item.Price}</td>
+        //                 <td>${total}</td>
+        //             </tr>
+        //         `);
+        //         amount += total;
+        //     });
+        //     itemList.append(`
+        //     <tr>
+        //         <td colspan="6" class="text-end fw-bold">
+        //             <span class="me-4">Total Item : ${items.length}</span>
+        //             <span>Total Amount : ${amount}</span>
+        //         </td>
+        //     </tr>
+        //     `);
+        // }
     
         // Add or Edit Item
             $('#saveItem').click(function () {
-                console.log("Klik save");
+                // console.log("Klik save");
                 const itemName = $('#itemName').val();
                 const itemQuantity = parseInt($('#itemQuantity').val());
                 const itemPrice = parseFloat($('#itemPrice').val());
-        
+                const itemId = parseInt($('#idItem').val());
+                console.log('item id ' + itemId);
                 const item = {
-                    ItemName: itemName,
-                    Quantity: itemQuantity,
-                    Price: itemPrice,
-                    // Total: itemQuantity * itemPrice
+                    itemName: itemName,
+                    quantity: itemQuantity,
+                    price: itemPrice,
+                    total: itemQuantity * itemPrice,
+                    soItemId: itemId
                 };
         
                 if (currentEditIndex === -1) {
@@ -218,18 +274,32 @@ $( document ).ready(function() {
             $(document).on('click', '.editItem', function () {
                 currentEditIndex = $(this).data('index');
                 const item = items[currentEditIndex];
-        
+                console.log(item);
                 // Populate modal fields with current item values
-                $('#itemName').val(item.ItemName);
-                $('#itemQuantity').val(item.Quantity);
-                $('#itemPrice').val(item.Price);
+                $('#itemName').val(item.itemName);
+                $('#itemQuantity').val(item.quantity);
+                $('#itemPrice').val(item.price);
+                $('#idItem').val(item.soItemId ?? '0');
             });
+            
+            $(document).on('click', '.deleteItem', function() {
+                itemToDeleteIndex = $(this).data('index'); // Simpan index item yang akan dihapus
+                $('#deleteConfirmationModal').modal('show'); // Tampilkan modal konfirmasi
+            });
+
+            $('#confirmDelete').click(function() {
+                const itemId = items[itemToDeleteIndex].soItemId;
+                if (itemId) deletedItemIds.push(itemId); // Simpan ID item yang dihapus jika item ada di database
         
-            // Handle delete item
-            $(document).on('click', '.deleteItem', function () {
-                const index = $(this).data('index');
-                items.splice(index, 1);
-                renderItems();
+                items.splice(itemToDeleteIndex, 1); // Hapus item dari array temporary
+                renderItems(); // Render ulang tabel
+                $('#deleteConfirmationModal').modal('hide'); // Tutup modal setelah konfirmasi
+            });
+            
+            // Menampilkan modal delete
+            $(document).on('click', '.deleteItem', function() {
+                itemToDeleteIndex = $(this).data('index'); // Simpan index item yang akan dihapus
+                $('#deleteConfirmationModal').modal('show'); // Tampilkan modal konfirmasi
             });
         
             // Reset current edit index when adding a new item
@@ -246,13 +316,14 @@ $( document ).ready(function() {
                 orderDate: $("#orderdate").val(),
                 comCustomerId: $("#customerId").val(),
                 address: $("#address").val(),
-                items: items
+                items: items,
+                deleteItemIds: deletedItemIds
             }
             
-            // console.log(data)
+            console.log(data)
             $.ajax({
-                url: window.location.origin + '/Home/AddNew/',
-                method: 'Post',
+                url: window.location.origin + `/api/EditOrder/${orderId}`,
+                method: 'Put',
                 contentType: 'application/json',
                 data: JSON.stringify(data),
                 success: function(response) {
